--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 #subtitulo {
     font-family: sans-serif;
-    color: #380b61;
+    color: #54178e;
     margin-top: 1% ;
     margin-left: 15%;
 }
@@ -23,7 +23,7 @@ fieldset {
 }
 
 body {
-    background-color: #b5cec5;
+    background-color: #638579;
     font-family: sans-serif;
     font-size: 1em;
     color: #380b61;
